# CFD2021-G4-Projects

./: .codecov.yml  .deepsource.toml  .editorconfig  .gitignore  .gitmodules  Manifest.toml  Project.toml  README.md  conda-environment.yml  setup.py
.circleci/: config.yml
.github/: labeler.yml
.github/workflows/: greetings.yml  julia_CI.yml  julia_format_pr.yml  python-package-conda.yml  setup.yml
Project-1/: README.ipynb  README.md
Project-1/asset/: illustrations.pptx
Project-1/example/: demo.jl  elliptic-grid-gen.ipynb  elliptic-grid-gen.nb  mesh-gen.nb
Project-1/src/: elliptic-grid-gen.jl  grid-gen.jl  mesh-gen.jl  transfinite-interpolate.jl  visualization.jl
Project-1/test/: runtests.jl  test.jl
doc/: 大作业1a.docx
docs/: README.md  make.jl
docs/references/: 大作业1b不可压缩NS方程圆柱绕流问题.docx
docs/src/: index.md
src/: CFD2021Projects.jl  CMakeLists.txt  README.md  misc-util.jl
test/: runtests.jl
